Refactor PopTiersDownloader to use new API and map